--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">How It Works</a></li>
-          <li><a class="main-nav-link" href="#">How It Works</a></li>
-          <li><a class="main-nav-link" href="#">How It Works</a></li>
-          <li><a class="main-nav-link" href="#">How It Works</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">How It Works</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#"> Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -459,7 +459,128 @@
           </div>
         </div>
       </section>
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+              <form action="#" class="cta-form">
+                <div>
+                  <label for="name">Your Name</label>
+                  <input type="text" id="name" placeholder="Chris" required />
+                </div>
+                <div>
+                  <label for="email">Your Email</label>
+                  <input
+                    type="email"
+                    id="email"
+                    placeholder="name@example.com"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="select-where">Where did you hear about us?</label>
+                  <select name="" id="select-where" required>
+                    <option value="Please Choose One Option">
+                      Please Choose One Option
+                    </option>
+                    <option value="Friend and Family">Friend and Family</option>
+                    <option value="Youtube Video">Youtube Video</option>
+                    <option value="Podcast">Podcast</option>
+                    <option value="Facebook ads">Facebook ads</option>
+                    <option value="Other">Other</option>
+                  </select>
+                </div>
+                <button class="btn btn-form">Sign Up Now</button>
+              </form>
+            </div>
+            <div
+              class="cta-img-box"
+              role="img"
+              aria-label="Woman Enjoy Food"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--5--cols grid-footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo"
+            ><img
+              src="./img/omnifood-logo.png"
+              alt="omnifood-logo"
+              class="logo"
+          /></a>
+          <ul class="social-link">
+            <li class="footer-link">
+              <a href="#" class="footer-logo"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li class="footer-link">
+              <a href="#" class="footer-logo"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li class="footer-link">
+              <a href="#" class="footer-logo"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy; 2023 by Omnifood, Inc all right reserved
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact Us</p>
+          <address class="contact">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <p>
+              <a href="tel:+95777271994" class="footer-link">+95 777271994</a>
+              <br />
+              <a href="mailto:pyaephonemyat2004@gmail.com" class="footer-link"
+                >pyaephonemyat2004@gmail.com</a
+              >
+            </p>
+          </address>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">Create Account</a></li>
+            <li><a href="#" class="footer-link">Sign in</a></li>
+            <li><a href="#" class="footer-link">IOS app</a></li>
+            <li><a href="#" class="footer-link">Android app</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">About Omnifood</a></li>
+            <li><a href="#" class="footer-link">For Business</a></li>
+            <li><a href="#" class="footer-link">Cooking partners</a></li>
+            <li><a href="#" class="footer-link">Careers</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Resource</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">Recipe directory</a></li>
+            <li><a href="#" class="footer-link">Help center</a></li>
+            <li><a href="#" class="footer-link">Privacy & terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
     <!-- Ionic Icon Link -->
     <script
